feat(data-product): change resourceQueryDto.ts adding language to api calls DIGIB2-1529
