# src/entities/openapi/model/resourceQueryDto.ts
@@ -1,7 +1,7 @@
 /**
  * agridata.ch API
  *
- * 
+ *
  *
  * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
  * https://openapi-generator.tech
@@ -9,7 +9,7 @@
  */
 
 
-export interface ResourceQueryDto { 
+export interface ResourceQueryDto {
     /**
      * page number
      */
@@ -26,5 +26,8 @@ export interface ResourceQueryDto {
      * string to search for in the resource
      */
     searchTerm?: string;
+    /**
+     * language code for multilingual fields. Must be supported by application.
+     */
+    language?: string;
 }
-
